fixed user overflow on hover

--- a/client/src/component/styles/home.css
+++ b/client/src/component/styles/home.css
@@ -15,8 +15,6 @@
     width: 70%;
     height: 100%;
     background: url("https://cdn.pixabay.com/photo/2020/05/18/16/17/social-media-5187243_960_720.png");
-    background-size: auto;
-    background-position: right;
 }
 
 .about-wrapper { flex-direction: column; justify-content: space-around; }
